# Cemotion

./: .gitattributes  .gitignore  LICENSE  README.md  README_en_ver.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml
Cemotion/: README.md  requirements.txt  setup.py
Cemotion-apple/: README.md  setup.py
Cemotion-apple/cemotion/: app.py  dataset.py  download.py
Cemotion/cemotion/: app.py
Cemotion/cemotion/models/: rnn_emotion_1.0.h5
Cemotion/cemotion/models/requirements/: big_Chinese_Words_Map.dict
cemotion/: __init__.py  app.py  download.py  t.txt
