[project]
name = "Cemotion"
version = "2.2.1"
description = "Cemotion 是 Python 下的中文 NLP 库，可以进行中文情感倾向分析、通用领域中文分词。"
authors = [
    { name = "Cyberbolt", email = "dtconlyone@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7,<3.11"

[project.urls]
Homepage = "https://github.com/Cyberbolt/Cemotion"

[project.dependencies]
tqdm = ">=4.64.1"
joblib = ">=1.0.0"
requests = ">=2.25.1"
numpy = ">=1.19.5"
torch = ">=2.0.0"
transformers = ">=4.24.0"
modelscope = ">=1.14.0"

[build-system]
requires = ["uv>=0.1.0"]
build-backend = "uv.build" 